--- a/examples/navigation/package.json
+++ b/examples/navigation/package.json
@@ -4,8 +4,7 @@
   "description": "redux-observable navigation example",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack-dev-server --inline --history-api-fallback",
-    "build": "webpack"
+    "start:dev": "webpack-dev-server --config webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
@@ -19,21 +18,46 @@
   "homepage": "https://github.com/redux-observable/redux-observable#readme",
   "dependencies": {
     "history": "^2.1.2",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.6.1",
+    "react-router": "3.2.1",
     "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
-    "redux-observable": "^0.8.0",
+    "redux": "^3.7.2",
+    "redux-act": "^1.7.4",
+    "redux-observable": "^0.18.0",
     "rxjs": "^5.0.0-beta.10"
   },
   "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "cssnano": "^3.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "express": "^4.16.3",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.8.3",
+    "postcss-clean": "^1.1.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.3",
+    "precss": "^3.1.2",
+    "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
+    "style-loader": "^0.20.3",
+    "sugarss": "^1.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2"
   }
 }
